Fixed search prompt container flicker on load

--- a/frontend/src/styles/components/SearchBar.css
+++ b/frontend/src/styles/components/SearchBar.css
@@ -141,8 +141,10 @@
 }
 
 .SearchIcon {
+    min-height: 30px;
     min-width: 30px;
     width: 30px;
+    height: 30px;
     padding: 0 11px;
 }
 
